# hurlalot

./: .gitignore  .releaserc.json  Cargo.toml  LICENSE  README.md  hurlalot-502f29f36be8f6ee.js  hurlalot-502f29f36be8f6ee_bg.wasm  index.html  justfile  settings.json
.cargo/: config.toml
.github/workflows/: release.yml  verify.yml
assets/: manifest.json  sw.js
src/: app.rs  main.rs
src/app/: command_center.rs  file.rs  mod.rs  tabs.rs
src/caller/: req.rs
src/editor/: buffer.rs  formatter.rs  highlighter.rs  hurl_ext.rs  hurl_render.rs  mod.rs  parser.rs  syntax.rs
src/editor/fmt/: mod.rs
src/editor/fmt/format/: json.rs  mod.rs  text.rs  token.rs
src/editor/fmt/linter/: core.rs  error.rs  rules.rs
src/hurl_ext/: mod.rs
src/mains/: linux.rs  mac.rs  windows.rs
test_hurl/: test.hurl
