[package]
name = "hurlalot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.22.0", default-features = true }
eframe = { version = "0.22.0", default-features = true, features = [
  "default_fonts", # Embed the default egui fonts.
] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }

catppuccin-egui = "3.1.0"
egui_tiles = "0.2.0"
log = "0.4.20"

regex = "1.9.1"
colored = "2.0.4"
hurl_core4 = {package = "hurl_core", version = "4.0.0"}


wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4.37"
wgpu = { version = "0.17.1", features = ["webgl"] }
enum-map = { version = "2", features = ["serde"] }
