[package]
name = "hurlalot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.23.0", default-features = true }
eframe = { version = "0.23.0", default-features = true, features = [
  "default_fonts", # Embed the default egui fonts.
] }
serde_json = "1.0"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }

catppuccin-egui = { git = "https://github.com/catppuccin/egui.git" }
egui_tiles = "0.3.1"
log = "0.4.20"

regex = "1.9.6"
colored = "2.0.4"
ehttp = { version = "0.3.1", optional = true }
poll-promise = { version = "0.3", optional = true, default-features = false }

wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4.37"
wgpu = { version = "0.17.1", features = ["webgl"] }
enum-map = { version = "2", features = ["serde"] }
