[package]
name = "hurlalot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.26", default-features = true }
eframe = { version = "0.29", default-features = true, features = [
  "default_fonts", # Embed the default egui fonts.
] }
egui_code_editor = { version = "0.2.2"}
ehttp = { version = "0.5"}
poll-promise = { version = "0.3",  default-features = false }
serde_json = "1.0"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }

catppuccin-egui = { version = "5" }
egui_tiles = "0.7.2"
log = "0.4.20"

regex = "1.9.6"
colored = "2.0.4"


wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4.37"
wgpu = { version = "0.19.3", features = ["webgl"] }
enum-map = { version = "2", features = ["serde"] }
web-sys = "0.3.64"
web-time = "0.2.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.38"